--- a/Dockerfile.aarch64.local
+++ b/Dockerfile.aarch64.local
@@ -1,4 +1,4 @@
-FROM amd64/alpine:3.8
+FROM multiarch/alpine:aarch64-edge 
 
 ENV TZ=Asia/Shanghai
 
@@ -11,6 +11,7 @@ COPY aria2c.sh /root/aria2c.sh
 
 RUN set -ex; \
 	\
+	sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories; \
 	apk --no-cache --no-progress upgrade; \
 	apk update && apk add aria2 --no-cache; \
 	chmod +x /root/aria2c.sh
