do not store log to disk

--- a/conf/aria2.conf
+++ b/conf/aria2.conf
@@ -50,7 +50,7 @@ file-allocation=prealloc
 disable-ipv6=true
 
 # General Options
-log=/var/log/aria2.log
+log=-
 #You can set either debug, info, notice, warn or error.
 log-level=notice
 
